--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="c2" id="final">
-                <div class="card card__grisO">
+                <div class="card card__grisC">
                     <img src="assets/redonda_a_sacar.png">
                     <h4 class="beige">
                         Empresa
@@ -136,7 +136,7 @@
                         Nombre
                     </h5>
                 </div>            
-                <div class="card card__grisO">
+                <div class="card card__grisC">
                     <img src="assets/redonda_a_sacar.png">
                     <h4 class="beige">
                         Empresa
@@ -148,7 +148,7 @@
                         Nombre
                     </h5>
                 </div>            
-                <div class="card card__grisO">
+                <div class="card card__grisC">
                     <img src="assets/redonda_a_sacar.png">
                     <h4 class="beige">
                         Empresa
@@ -160,7 +160,7 @@
                         Nombre
                     </h5>
                 </div>            
-                <div class="card card__grisO">
+                <div class="card card__grisC">
                     <img src="assets/redonda_a_sacar.png">
                     <h4>
                         Empresa
