--- a/index.html
+++ b/index.html
@@ -8,64 +8,37 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="style.css"></link>
     <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/animate.css">
 
     <title>Estudio TanGente</title>
 </head>
 <body>
-    <header class="header">
-        <img src="assets/tangente_estudio_diseño_design_logo_marca_branding.png" class="logo" alt="Estudio TanGente Logo">
-        <nav id="main_menu">
-            <ul class="menu__main">
-                <li class="menu__item">
-                    <a menu href="pages/quienesomos.html">
-                        Quienes Somos
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="pages/servicios.html">
-                        Servicios
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="pages/portfolio.html">
-                        Portfolio
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="pages/contacto.html">
-                        Contacto
-                    </a>
-                </li>
-            </ul>
-            <ul class="menu__small">
-                <li><i class="fa-solid fa-bars verde menu__hamb"></i>
-                    <ul class="menu__submenu"> 
-                        <li class="menu__item">
-                            <a menu href="pages/quienesomos.html">
-                                Quienes Somos
-                            </a>
+    <header class="cabezera">
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon button__green"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="pages/servicios.html">
-                                Servicios
-                            </a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="pages/portfolio.html">
-                                Portfolio
-                            </a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
                         </li>
-                        <li class="menu__item">
-                            <a href="pages/contacto.html">
-                                Contacto
-                            </a>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
                         </li>
                     </ul>
-                </li>
-            </ul>
-            <hr class="linea">
-        </nav>
+                </div>
+            </div>
+        </nav>      
     </header>
     <div class="up">
         <a href="#"> 
@@ -124,7 +97,7 @@
                 </div>
             </div>
             <div class="c2" id="final">
-                <div class="card card__grisC">
+                <div class="card card__grisC col-12">
                     <img src="assets/redonda_a_sacar.png">
                     <h4 class="beige">
                         Empresa
@@ -136,7 +109,7 @@
                         Nombre
                     </h5>
                 </div>            
-                <div class="card card__grisC">
+                <div class="card card__grisC col-12">
                     <img src="assets/redonda_a_sacar.png">
                     <h4 class="beige">
                         Empresa
@@ -148,7 +121,7 @@
                         Nombre
                     </h5>
                 </div>            
-                <div class="card card__grisC">
+                <div class="card card__grisC col-12">
                     <img src="assets/redonda_a_sacar.png">
                     <h4 class="beige">
                         Empresa
@@ -195,6 +168,7 @@
             </a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
     <script>
     new WOW().init();
