--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="style.css"></link>
     <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/animate.css">
 
     <title>Estudio TanGente</title>
 </head>
 <body>
-    <header class="cabezera">
+    <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#"><img class="logo" src="assets/tangente_estudio_diseño_design_logo_marca_branding.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon button__green"></span>
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars verde hamb"></i></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse container-fluid linea" id="navbarNav">
+                    <ul class="navbar-nav justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link verde underline text-center" href="pages/quienesomos.html">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link verde underline text-center" href="pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link verde underline text-center" href="pages/portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
+                            <a class="nav-link verde underline text-center" href="pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -45,32 +45,32 @@
             <i class="fa-sharp fa-solid fa-lg fa-circle-up beige"></i>
         </a>
     </div>
-    <section id="inicio">
+    <section id="inicio" class="container-fluid">
         <h3 class="verde center">Somos un equipo de jóvenes profesionales unidos, por una historia en común, para crear, impulsar y revitalizar las necesidades creativas de las organizaciones.</h3>
         <a href="pages/quienesomos.html" class="buttons button__green center">Conocenos</a>
 
     </section>
-    <section id="ultimos" class="sec">
-        <h2 class="verde center">Últimos Trabajos</h2>
-        <article class="portfolio_grid">
-                <div class="newjob newjobs1"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs2"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs3"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs4"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs5"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs6"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs7"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs8"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs9"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs10"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs11"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-                <div class="newjob newjobs12"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
-        </article>
-        <article class="sec flex">
-        <a href="pages/portfolio.html" class="buttons button__green center">Ver más</a>
-         </article>
+    <section id="ultimos" class="sec container-fluid">
+            <h2 class="verde center">Últimos Trabajos</h2>
+            <article class="portfolio_grid">
+                    <div class="newjob newjobs1"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs2"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs3"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs4"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs5"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs6"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs7"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs8"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs9"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs10"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs11"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+                    <div class="newjob newjobs12"><h6 class="portfolio__text center verde">Texto prueba</h6></div>
+            </article>
+            <article class="sec flex">
+                <a href="pages/portfolio.html" class="buttons button__green center">Ver más</a>
+            </article>
     </section>
-    <section class="cierre cierre__fondo sec">
+    <section class="cierre cierre__fondo sec container-fluid">
         <h2 class="verde center">Contacto</h2>
         <article class="sec">
             <div class="c2">
@@ -133,7 +133,7 @@
                         Nombre
                     </h5>
                 </div>            
-                <div class="card card__grisC">
+                <div class="card card__grisC col-12">
                     <img src="assets/redonda_a_sacar.png">
                     <h4>
                         Empresa
@@ -149,24 +149,26 @@
         </article>   
     </section>
     <footer>
-        <img src="assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
-        <div class="social">
-            <a href="https://www.facebook.com/tangentediseno/" target="_blank">
-                <i class="fa-brands fa-facebook-f icon icon__beige"></i>
-            </a>
-            <a href="https://www.instagram.com/estudio_tangente/" target="_blank">
-                <i class="fa-brands fa-instagram icon icon__beige"></i>
-            </a>
-            <a href="https://www.behance.net/tangentediseno" target="_blank">
-                <i class="fa-brands fa-behance icon icon__beige"></i>
-            </a>
-            <a href="https://www.linkedin.com/company/11221636/admin/" target="_blank">
-                <i class="fa-brands fa-linkedin-in icon icon__beige"></i>
-            </a>
-            <a href="tel:+5491161895477" target="_blank">
-                <i class="fa-solid fa-phone icon icon__beige"></i>
-            </a>
-        </div>
+        <div class="container-fluid">
+            <img src="assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
+            <div class="social">
+                <a href="https://www.facebook.com/tangentediseno/" target="_blank">
+                    <i class="fa-brands fa-facebook-f icon icon__beige"></i>
+                </a>
+                <a href="https://www.instagram.com/estudio_tangente/" target="_blank">
+                    <i class="fa-brands fa-instagram icon icon__beige"></i>
+                </a>
+                <a href="https://www.behance.net/tangentediseno" target="_blank">
+                    <i class="fa-brands fa-behance icon icon__beige"></i>
+                </a>
+                <a href="https://www.linkedin.com/company/11221636/admin/" target="_blank">
+                    <i class="fa-brands fa-linkedin-in icon icon__beige"></i>
+                </a>
+                <a href="tel:+5491161895477" target="_blank">
+                    <i class="fa-solid fa-phone icon icon__beige"></i>
+                </a>
+            </div>
+        </div>    
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
