--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -6,94 +6,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="../style.css"></link>
-    <link rel="icon" type="image/x-icon" href="../assets/tangente_favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Quienes Somos</title>
 </head>
 <body>
-    <header class="header">
-        <a href="../index.html"><img src="../assets/tangente_estudio_diseño_design_logo_marca_branding.png" class="logo" alt="Estudio TanGente Logo"></a>
-        <nav id="main_menu">
-            <ul id="menu">
-                <li class="menu__item">
-                    <a menu href="quienesomos.html">
-                        Quienes Somos
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="servicios.html">
-                        Servicios
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="portfolio.html">
-                        Portfolio
-                    </a>
-                </li>
-                <li class="menu__item">
-                    <a href="contacto.html">
-                        Contacto
-                    </a>
-                </li>
-            </ul>
-            <hr class="linea">
-        </nav>
+    <header class="pershead">
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/tangente_estudio_diseño_design_logo_marca_branding.png"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars verde hamb"></i></span>
+                </button>
+                <div class="collapse navbar-collapse container-fluid linea" id="navbarNav">
+                    <ul class="navbar-nav justify-content-end">
+                        <li class="nav-item active">
+                            <a class="nav-link verde underline text-center" href="#">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link verde underline text-center" href="servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link verde underline text-center" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link verde underline text-center" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>      
     </header>
-    <section id="cabezera">
-    </section>
     <div class="up">
         <a href="#"> 
-            <i class="fa-sharp fa-solid fa-lg fa-circle-up"></i>
+            <i class="fa-sharp fa-solid fa-circle-up beige"></i>
         </a>
     </div>
+    <section id="cabezera">
+    </section>
     <section id="quienesomos" class="sec">
         <h2 class="verde center">Quienes Somos</h2>
-        <article>
-            <h3 class="verde">
-                Somos un equipo de jóvenes profesionales unidos, por una historia en común, para crear, impulsar y revitalizar las necesidades creativas de las organizaciones.<br>
-                A través de la experiencia de cada diseñador conformamos el equipo de trabajo adecuado para cumplir las necesidades de nuestros clientes, con liderazgo, trabajo en equipo, respeto, compañerismo, responsabilidad y empatía.
-            </h3>
-            <img src="../assets/Frame 3.png">
-            
-        </article>
+        <div class="row">
+            <div class="container col-sm-12 col-md-6">
+                <h4 class="verde" id="textoquienes">
+                    Somos un equipo de jóvenes profesionales unidos, por una historia en común, para crear, impulsar y revitalizar las necesidades creativas de las organizaciones.<br/> <br/>
+                    A través de la experiencia de cada diseñador conformamos el equipo de trabajo adecuado para cumplir las necesidades de nuestros clientes, con liderazgo, trabajo en equipo, respeto, compañerismo, responsabilidad y empatía.
+                </h4>
+            </div>
+            <div class="container-fluid col-sm-12 col-md-6">
+                <img src="../assets/Frame 3.png">
+            </div>
+        </div>
     </section>
-    <section class="sec trio">
-        <div class="perfil">
-            <img class="retrato" src="../assets/Frame2.png">
-            <h4 class="verde center">Gisella<br/>Drezek</h4>
-            <h6 class="beige center">Co-Fundadora</h6>
-        </div>
-        <div class="perfil">
-            <img class="retrato" src="../assets/Frame2.png">
-            <h4 class="verde center">Federico<br/>Uliki</h4>
-            <h6 class="beige center">Co-Fundador</h6>
-        </div>
-        <div class="perfil">
-            <img class="retrato" src="../assets/Frame2.png">
-            <h4 class="verde center">Ezequiel<br/>Garcia</h4>
-            <h6 class="beige center">Co-Fundador</h6>
+    <section class="sec container-fluid">
+        <div class="row trio">
+            <div class="perfil col-md-3">
+                <img class="retrato" src="../assets/Frame2.png">
+                <h4 class="verde center">Gisella<br/>Drezek</h4>
+                <h6 class="beige center">Co-Fundadora</h6>
+            </div>
+            <div class="perfil col-md-3">
+                <img class="retrato" src="../assets/Frame2.png">
+                <h4 class="verde center">Federico<br/>Uliki</h4>
+                <h6 class="beige center">Co-Fundador</h6>
+            </div>
+            <div class="perfil col-md-3">
+                <img class="retrato" src="../assets/Frame2.png">
+                <h4 class="verde center">Ezequiel<br/>Garcia</h4>
+                <h6 class="beige center">Co-Fundador</h6>
+            </div>
         </div>
     </section>
 
     <footer>
-        <img src="../assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
-        <div class="social">
-            <a href="https://www.facebook.com/tangentediseno/" target="_blank">
-                <i class="fa-brands fa-facebook-f icon icon__beige"></i>
-            </a>
-            <a href="https://www.instagram.com/estudio_tangente/" target="_blank">
-                <i class="fa-brands fa-instagram icon icon__beige"></i>
-            </a>
-            <a href="https://www.behance.net/tangentediseno" target="_blank">
-                <i class="fa-brands fa-behance icon icon__beige"></i>
-            </a>
-            <a href="https://www.linkedin.com/company/11221636/admin/" target="_blank">
-                <i class="fa-brands fa-linkedin-in icon icon__beige"></i>
-            </a>
-            <a href="tel:+5491161895477" target="_blank">
-                <i class="fa-solid fa-phone icon icon__beige"></i>
-            </a>
-        </div>
+        <div class="container-fluid">
+            <img src="../assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
+            <div class="social">
+                <a href="https://www.facebook.com/tangentediseno/" target="_blank">
+                    <i class="fa-brands fa-facebook-f icon icon__beige"></i>
+                </a>
+                <a href="https://www.instagram.com/estudio_tangente/" target="_blank">
+                    <i class="fa-brands fa-instagram icon icon__beige"></i>
+                </a>
+                <a href="https://www.behance.net/tangentediseno" target="_blank">
+                    <i class="fa-brands fa-behance icon icon__beige"></i>
+                </a>
+                <a href="https://www.linkedin.com/company/11221636/admin/" target="_blank">
+                    <i class="fa-brands fa-linkedin-in icon icon__beige"></i>
+                </a>
+                <a href="tel:+5491161895477" target="_blank">
+                    <i class="fa-solid fa-phone icon icon__beige"></i>
+                </a>
+            </div>
+        </div>    
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
 </body>
 </html>
