contenido agregado y ñ corregida

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logo" src="assets/tangente_estudio_diseño_design_logo_marca_branding.png"></a>
+                <a class="navbar-brand" href="#"><img class="logo" src="assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa-solid fa-bars verde hamb"></i></span>
                 </button>
@@ -46,9 +46,9 @@
         </a>
     </div>
     <section id="inicio" class="container-fluid">
+        
         <h3 class="verde center">Somos un equipo de jóvenes profesionales unidos, por una historia en común, para crear, impulsar y revitalizar las necesidades creativas de las organizaciones.</h3>
         <a href="pages/quienesomos.html" class="buttons button__green center">Conocenos</a>
-
     </section>
     <section id="ultimos" class="sec container-fluid">
             <h2 class="verde center">Últimos Trabajos</h2>
@@ -150,7 +150,7 @@
     </section>
     <footer>
         <div class="container-fluid">
-            <img src="assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
+            <img src="assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
             <div class="social">
                 <a href="https://www.facebook.com/tangentediseno/" target="_blank">
                     <i class="fa-brands fa-facebook-f icon icon__beige"></i>
