--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
     <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/tangente_estudio_diseño_design_logo_marca_branding.png"></a>
+                <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa-solid fa-bars verde hamb"></i></span>
                 </button>
@@ -163,7 +163,7 @@
     </section>
     <footer>
         <div class="container-fluid">
-            <img src="../assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
+            <img src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
             <div class="social">
                 <a href="https://www.facebook.com/tangentediseno/" target="_blank">
                     <i class="fa-brands fa-facebook-f icon icon__beige"></i>
