--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -17,7 +17,7 @@
     <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logo" src="../assets/tangente_estudio_diseño_design_logo_marca_branding.png"></a>
+                <a class="navbar-brand" href="#"><img class="logo" src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa-solid fa-bars verde hamb"></i></span>
                 </button>
@@ -84,8 +84,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/diseñoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/diseñoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/diseñ&ntildeweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -100,8 +100,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/diseñoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/diseñoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/diseñ&ntildeweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -116,8 +116,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/diseñoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/diseñoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/diseñ&ntildeweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -132,8 +132,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/diseñoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/diseñoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/diseñ&ntildeweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -148,8 +148,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/diseñoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/diseñoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/diseñ&ntildeweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -164,8 +164,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/diseñoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/diseñoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/diseñ&ntildeweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -174,7 +174,7 @@
     </section>
     <footer>
         <div class="container-fluid">
-            <img src="../assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
+            <img src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
             <div class="social">
                 <a href="https://www.facebook.com/tangentediseno/" target="_blank">
                     <i class="fa-brands fa-facebook-f icon icon__beige"></i>
