--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -17,7 +17,7 @@
     <header class="pershead">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/tangente_estudio_diseño_design_logo_marca_branding.png"></a>
+                <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa-solid fa-bars verde hamb"></i></span>
                 </button>
@@ -57,24 +57,24 @@
                 </h4>
             </div>
             <div class="container-fluid col-sm-12 col-md-6">
-                <img src="../assets/Frame 3.png">
+                <img src="../assets/estudio_tangente_design.png">
             </div>
         </div>
     </section>
     <section class="sec container-fluid">
         <div class="row trio">
             <div class="perfil col-md-3">
-                <img class="retrato" src="../assets/Frame2.png">
+                <img class="retrato" src="../assets/tangente_estudio_design_equipo_partners_Gisela-Drezek">
                 <h4 class="verde center">Gisella<br/>Drezek</h4>
                 <h6 class="beige center">Co-Fundadora</h6>
             </div>
             <div class="perfil col-md-3">
-                <img class="retrato" src="../assets/Frame2.png">
+                <img class="retrato" src="../assets/tangente_estudio_design_equipo_partners_Federico-Uliki">
                 <h4 class="verde center">Federico<br/>Uliki</h4>
                 <h6 class="beige center">Co-Fundador</h6>
             </div>
             <div class="perfil col-md-3">
-                <img class="retrato" src="../assets/Frame2.png">
+                <img class="retrato" src="../assets/tangente_estudio_design_equipo_partners_Ezequiel-Garcia">
                 <h4 class="verde center">Ezequiel<br/>Garcia</h4>
                 <h6 class="beige center">Co-Fundador</h6>
             </div>
@@ -83,7 +83,7 @@
 
     <footer>
         <div class="container-fluid">
-            <img src="../assets/tangente_estudio_diseño_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
+            <img src="../assets/tangente_estudio_dise&ntildeo_design_logo_marca_branding_small.png" alt="Estudio TanGente Logo Chico">
             <div class="social">
                 <a href="https://www.facebook.com/tangentediseno/" target="_blank">
                     <i class="fa-brands fa-facebook-f icon icon__beige"></i>
