--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Contacto</title>
+    <meta name="description" content="Estudio de diseño gráfico, diseño web, marketing digital, identidad corporativa e ilustración en Buenos Aires, Argentina">
+    <meta name="subject" content="Diseño gráfico en todas sus variantes" />
+    <meta name="copyright" content="Copyright © 2017 estudiotangente.com.ar" />
+    <meta name="dc.creator" content="Estudio Tangente" />
+    <meta name="revisit" content="1 days" />
+    <meta property="og:title" content="Contacto | Estudio Tangente" />
+    <meta property="og:type" content="og:website" />
+    <meta property="og:url" content="http://www.estudiotangente.com.ar" />
+    <meta name="geo.region" content="AR" />
+    <meta name="geo.placename" content="Buenos Aires" />
+    <meta name="geo.position" content="-34.587401;-58.428726" />
+    <meta name="ICBM" content="-34.587401, -58.428726" />
+    
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="css/animate.css">
@@ -11,7 +26,7 @@
     <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Contacto</title>
+
 </head>
 <body>
     <header class="pershead">
@@ -51,7 +66,7 @@
 
     <h2 class="verde center">Contacto</h2>
 
-    <section class="cierre">
+    <section class="cierre container-fluid">
         <article class="sec">
             <div class="c2">
                 <form action="netlify" method="post" enctype="text/plain" netlify>
@@ -65,57 +80,53 @@
                 </form>
             </div>
             <div class="c2" id="contacto">
-                <div class="c2">
-                    <div class="icon_field icon_field__2columnas">
-                        <a href="https://www.facebook.com/tangentediseno/" target="_blank">
-                            <i class="fa-brands fa-facebook-f icon fa-lg icon icon__verde"></i>
-                            <h6 class="gris">tangentediseno</h6>
-                        </a>
-                    </div>
-                    <div class="icon_field icon_field__2columnas">
-                        <a href="https://www.behance.net/tangentediseno" target="_blank">
-                            <i class="fa-brands fa-behance fa-lg icon icon__verde"></i>
-                            <h6 class="gris">tangentediseno</h6>
-                        </a>
-                    </div>                      
-                    <div class="icon_field icon_field__2columnas">
-                        <a href="https://www.instagram.com/estudio_tangente/" target="_blank">
-                            <i class="fa-brands fa-instagram fa-lg icon icon__verde"></i>
-                            <h6 class="gris">@estudio_tangente</h6>
-                        </a>
-                    </div>
-                    <div class="icon_field icon_field__2columnas">
-                        <a href="https://www.linkedin.com/company/11221636/admin/" target="_blank">
-                            <i class="fa-brands fa-linkedin-in fa-lg icon icon__verde"></i>
-                            <h6 class="gris">Estudio Tangente</h6>
-                        </a>
-                    </div>
+                <div class="icon_field icon_field__2columnas">
+                    <a href="https://www.facebook.com/tangentediseno/" target="_blank" class="noline">
+                        <i class="fa-brands fa-facebook-f icon fa-lg icon icon__verde"></i>
+                        <h6 class="gris">tangentediseno</h6>
+                    </a>
                 </div>
-                <div class="c2">
-                    <div class="icon_field icon_field__2columnas">
-                        <a href="mailto:info@estudiotangente.com.ar" target="_blank">
-                            <i class="fa-regular fa-envelope fa-lg icon icon__verde"></i>
-                            <h6 class="gris">info@estudiotangente.com.ar</h6>
-                        </a>
-                    </div>                       
-                    <div class="icon_field icon_field__2columnas">
-                        <a href="tel:+5491161895477" target="_blank">
-                            <i class="fa-solid fa-phone fa-lg icon icon__verde"></i>
-                            <h6 class="gris">+54 11 6189 5477</h6>
-                        </a>
-                    </div>                   
-                    <div class="icon_field icon_field__2columnas">
-                        <a href="https://wa.me/5491161895477" target="_blank">
-                            <i class="fa-brands fa-whatsapp fa-lg icon icon__verde"></i>
-                            <h6 class="gris">+54 11 6189 5477</h6>
-                        </a>
-                    </div>  
-                 </div>               
+                <div class="icon_field icon_field__2columnas">
+                    <a href="https://www.behance.net/tangentediseno" target="_blank" class="noline">
+                        <i class="fa-brands fa-behance fa-lg icon icon__verde"></i>
+                        <h6 class="gris">tangentediseno</h6>
+                    </a>
+                </div>                      
+                <div class="icon_field icon_field__2columnas">
+                    <a href="https://www.instagram.com/estudio_tangente/" target="_blank" class="noline">
+                        <i class="fa-brands fa-instagram fa-lg icon icon__verde"></i>
+                        <h6 class="gris">@estudio_tangente</h6>
+                    </a>
+                </div>
+                <div class="icon_field icon_field__2columnas">
+                    <a href="https://www.linkedin.com/company/11221636/admin/" target="_blank" class="noline">
+                        <i class="fa-brands fa-linkedin-in fa-lg icon icon__verde"></i>
+                        <h6 class="gris">Estudio Tangente</h6>
+                    </a>
+                </div>
+                <div class="icon_field icon_field__2columnas">
+                    <a href="mailto:info@estudiotangente.com.ar" target="_blank" class="noline">
+                        <i class="fa-regular fa-envelope fa-lg icon icon__verde"></i>
+                        <h6 class="gris">info@estudiotangente.com.ar</h6>
+                    </a>
+                </div>                       
+                <div class="icon_field icon_field__2columnas">
+                    <a href="tel:+5491161895477" target="_blank" class="noline">
+                        <i class="fa-solid fa-phone fa-lg icon icon__verde"></i>
+                        <h6 class="gris">+54 11 6189 5477</h6>
+                    </a>
+                </div>                   
+                <div class="icon_field icon_field__2columnas">
+                    <a href="https://wa.me/5491161895477" target="_blank" class="noline">
+                        <i class="fa-brands fa-whatsapp fa-lg icon icon__verde"></i>
+                        <h6 class="gris">+54 11 6189 5477</h6>
+                    </a>
+                </div> 
             </div>
         </article>   
     </section>
-    <section class="sec" id="ruleta">
-            <div class="card card__grisC">
+    <section class="sec container-fluid" id="ruleta">
+            <div class="card card__grisC col-12">
                 <img src="../assets/redonda_a_sacar.png">
                 <h4 class="beige">
                     Empresa
@@ -127,7 +138,7 @@
                     Nombre
                 </h5>
             </div>            
-            <div class="card card__grisC">
+            <div class="card card__grisC col-12">
                 <img src="../assets/redonda_a_sacar.png">
                 <h4 class="beige">
                     Empresa
@@ -139,7 +150,7 @@
                     Nombre
                 </h5>
             </div>            
-            <div class="card card__grisC">
+            <div class="card card__grisC col-12">
                 <img src="../assets/redonda_a_sacar.png">
                 <h4 class="beige">
                     Empresa
@@ -155,9 +166,9 @@
     </section>
     <section class="sec">
         <h3 class="beige center corto">Si aún tenes alguna duda podes pasar por estos links para ver quienes somos y que hacemos.</h3>
-        <article class="sec flex">
+        <article id="botonesfin" class="sec flex">
             <a href="quienesomos.html" class="buttons button__violeta center">Quienes Somos</a>
-            <a href="servicios.html" class="buttons button__violeta center">Servicio</a>
+            <a href="servicios.html" class="buttons button__violeta center">Servicios</a>
             <a href="portfolio.html" class="buttons button__violeta center">Portfolio</a>
         </article>
     </section>
