--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Portfolio</title>
+    <meta name="description" content="Estudio de diseño gráfico, diseño web, marketing digital, identidad corporativa e ilustración en Buenos Aires, Argentina">
+    <meta name="subject" content="Diseño gráfico en todas sus variantes" />
+    <meta name="copyright" content="Copyright © 2017 estudiotangente.com.ar" />
+    <meta name="dc.creator" content="Estudio Tangente" />
+    <meta name="revisit" content="1 days" />
+    <meta property="og:title" content="Portfolio | Estudio Tangente" />
+    <meta property="og:type" content="og:website" />
+    <meta property="og:url" content="http://www.estudiotangente.com.ar" />
+    <meta name="geo.region" content="AR" />
+    <meta name="geo.placename" content="Buenos Aires" />
+    <meta name="geo.position" content="-34.587401;-58.428726" />
+    <meta name="ICBM" content="-34.587401, -58.428726" />
+    
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="../style.css"></link>
     <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Portfolio</title>
 </head>
 <body>
     <header class="pershead">
@@ -47,11 +60,11 @@
     </div>
     <section id="cabezera">
     </section>
-    <section class="sec">
+    <section class="sec container-fluid">
         <h2 class="verde center">Portfolio</h2>
-        <article class="filtros">
+        <article class="filtros container-fluid">
             <a href="#branding" class="marcadores">
-                 <i class="fa-solid fa-copyright fa-lg icon icon__beige"></i>
+                <i class="fa-solid fa-copyright fa-lg icon icon__beige"></i>
                 <h4 class="beige center">Branding</h4>
             </a>
             <a href="#presentaciones" class="marcadores">
