--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Servicios</title>
+    <meta name="description" content="Estudio de diseño gráfico, diseño web, marketing digital, identidad corporativa e ilustración en Buenos Aires, Argentina">
+    <meta name="subject" content="Diseño gráfico en todas sus variantes" />
+    <meta name="copyright" content="Copyright © 2017 estudiotangente.com.ar" />
+    <meta name="dc.creator" content="Estudio Tangente" />
+    <meta name="revisit" content="1 days" />
+    <meta property="og:title" content="Servicios | Estudio Tangente" />
+    <meta property="og:type" content="og:website" />
+    <meta property="og:url" content="http://www.estudiotangente.com.ar" />
+    <meta name="geo.region" content="AR" />
+    <meta name="geo.placename" content="Buenos Aires" />
+    <meta name="geo.position" content="-34.587401;-58.428726" />
+    <meta name="ICBM" content="-34.587401, -58.428726" />
+    
     <link rel="stylesheet" href="normalize.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></link>
     <link rel="stylesheet" href="css/animate.css">
@@ -11,7 +26,7 @@
     <link rel="icon" type="image/x-icon" href="assets/tangente_favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Servicios</title>
+
 </head>
 <body>
     <header class="pershead">
@@ -48,28 +63,27 @@
     <section id="cabezera">
     </section>
     <h2 class="verde center">Servcios</h2>
-
-    <section class="sec trio">
-            <div class="perfil">
-            <img class="retrato" src="../assets/Frame2.png">
-            <h4 class="verde center">Branding</h4>
-            <h6 class="beige center">Diseño de identidad institucional para que te destaques de tu competencia.</h6>
+    <section class="sec container-fluid">
+        <div class="row trio">
+            <div class="perfil col-md-3">
+                <img class="retrato" src="../assets/Frame2.png">
+                <h4 class="verde center">Branding</h4>
+                <h6 class="beige center">Diseño de identidad institucional para que te destaques de tu competencia.</h6>
+            </div>
+            <div class="perfil col-md-3">
+                <img class="retrato" src="../assets/Frame2.png">
+                <h4 class="verde center">Sitios Web</h4>
+                <h6 class="beige center">Diseño y programación de sitios web modernos y atractivos para todas las plataformas.            </h6>
+            </div>
+            <div class="perfil col-md-3">
+                <img class="retrato" src="../assets/Frame2.png">
+                <h4 class="verde center">Motion Graphics</h4>
+                <h6 class="beige center">Diseño de identidad institucional para que te destaques de tu competencia.</h6>
+            </div>
         </div>
-        <div class="perfil">
-            <img class="retrato" src="../assets/Frame2.png">
-            <h4 class="verde center">Sitios Web</h4>
-            <h6 class="beige center">Diseño y programación de sitios web modernos y atractivos para todas las plataformas.            </h6>
-        </div>
-        <div class="perfil">
-            <img class="retrato" src="../assets/Frame2.png">
-            <h4 class="verde center">Motion Graphics</h4>
-            <h6 class="beige center">Diseño de identidad institucional para que te destaques de tu competencia.</h6>
-        </div>
-
-     
     </section>
-    <section class="sec" id="cuadro">
-        <div>
+    <section class="sec container" id="cuadro">
+        <div class="row trio container-fluid">
             <h3 class="beige">Otros</h3>
             <article id="otros">
                 <div class="icon_field icon-serv">
