--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -97,8 +97,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/dise&ntildeoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -113,8 +113,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/dise&ntildeoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -129,8 +129,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/dise&ntildeoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -145,8 +145,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/dise&ntildeoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -161,8 +161,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/dise&ntildeoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
@@ -177,8 +177,8 @@
         <article class="portfolio">
             <img src="../assets/facebook_post_tangente_comida_l.jpg" alt="Boutique de Viajes"/>
             <img src="../assets/cartel_viapublica_tangente_techo_l.jpg" alt="Techo">
-            <img src="../assets/_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
-            <img src="../assets/_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
+            <img src="../assets/dise&ntildeoweb_home_tangente_estudiopw_l.jpg" alt="Estudio Juríco PW">
+            <img src="../assets/dise&ntildeoweb_propiedades_tangente_remax-vanguard_l.jpg" alt="ReMax Vanguard">
             <img src="../assets/identidad_logo_tangente_marfen_l.jpg" alt="Marfen">
             <img src="../assets/packaging_tapadisco_tangente_la-inmensidad-del-mar_l.jpg" alt="La Inmensidad del Mar">
             <img src="../assets/identidad_logo_tangente_the-alchemist-studio_l.jpg" alt="The Alchemist Studio">
